rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__context_advanced__test_context_advanced__create_conversion_lambert_conic_conformal_2sp_belgium.snap
---
source: crates/proj/src/functions/iso19111/context_advanced.rs
expression: wkt
---
CONVERSION["Lambert Conic Conformal (2SP Belgium)",
    METHOD["Lambert Conic Conformal (2SP Belgium)",
        ID["EPSG",9803]],
    PARAMETER["Latitude of false origin",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8821]],
    PARAMETER["Longitude of false origin",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8822]],
    PARAMETER["Latitude of 1st standard parallel",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8823]],
    PARAMETER["Latitude of 2nd standard parallel",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8824]],
    PARAMETER["Easting at false origin",0,
        LENGTHUNIT["Metre",1],
        ID["EPSG",8826]],
    PARAMETER["Northing at false origin",1,
        LENGTHUNIT["Metre",1],
        ID["EPSG",8827]]]
