rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__context_advanced__test_context_advanced__create_conversion_local_orthographic.snap
---
source: crates/proj/src/functions/iso19111/context_advanced.rs
expression: wkt
---
CONVERSION["Local Orthographic",
    METHOD["Local Orthographic",
        ID["EPSG",1130]],
    PARAMETER["Latitude of projection centre",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8811]],
    PARAMETER["Longitude of projection centre",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8812]],
    PARAMETER["Azimuth at projection centre",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8813]],
    PARAMETER["Scale factor at projection centre",1,
        SCALEUNIT["unity",1],
        ID["EPSG",8815]],
    PARAMETER["Easting at projection centre",1,
        LENGTHUNIT["Metre",1],
        ID["EPSG",8816]],
    PARAMETER["Northing at projection centre",1,
        LENGTHUNIT["Metre",1],
        ID["EPSG",8817]]]
